Issue #2639420 by lachezar.valchev: Fixed missing dependecy in info.yml and changed style to yml compatible.

--- a/data.info.yml
+++ b/data.info.yml
@@ -1,5 +1,10 @@
-name: Data
-type: module
-description: Provides two dimensional storage space for arbitrary data sets.
-package: Data
+name:
+  'Data'
+description:
+  'Provides two dimensional storage space for arbitrary data sets.'
 core: 8.x
+package: Data
+type: module
+dependencies:
+ - ctools
+version: VERSION
